# omega-cov

./: .gitignore  LICENSE  README.md  pyproject.toml
calibration/: README.md  trivia_partial_archived.csv  trivia_v2_results.csv  wikibio_paired.csv  wikibio_results.csv
docs/: calibration.md
notebooks/: calibrate_colab.ipynb
omega_cov/: __init__.py  core.py  models.py  thresholds.py
scripts/: README.md  analyze_thresholds.py  analyze_trivia_v2.py  calibrate_trivia.py  calibrate_trivia_v2.py  calibrate_wikibio.py  plot_calibration.py
tests/: test_core.py
