[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omega-cov"
version = "0.1.0"
description = "A token-level metric for detecting confabulation in LLM outputs via covariance of cosine displacement and Shannon surprise."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Novan Baillif", email = "nbaillif974@gmail.com" }
]
keywords = [
    "llm",
    "hallucination",
    "confabulation",
    "uncertainty-quantification",
    "interpretability",
    "nlp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "torch>=2.0",
    "transformers>=4.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
calibrate = [
    "datasets>=2.16,<4.0",
    "anthropic>=0.40",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/NovanBaillif/omega-cov"
Documentation = "https://github.com/NovanBaillif/omega-cov/blob/main/docs/api.md"
Issues = "https://github.com/NovanBaillif/omega-cov/issues"

[tool.hatch.build.targets.wheel]
packages = ["omega_cov"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
